--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: Pritesh Verma a.k.a Love # your name (or website title) here
+title: Pritesh Verma # your name (or website title) here
 logo: "/images/logo.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  Hi I am Pritesh also known as love, I am Passionate about learnings new things currently I'm working as a Research Fellow at IIT dharwad.
   <br><br>
-  Second description 
+  These days I'm working on Eigendecomposition problem and Learning the ML/DL.
   <br><br>
   <a href="https://www.linkedin.com/in/priteshvermaa/">View My LinkedIn Profile</a> 
   
