--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Pritesh Verma # your name (or website title) here
-logo: "/images/logo.jpg?raw=true" # your photo (or logo) here
+logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Hi I am Pritesh also known as love, I am Passionate about learnings new things currently I'm working as a Research Fellow at IIT dharwad.
   <br><br>
